Obsevaciones de Baja y denegacion masiva de baja